backend: add recruitment info into player and team endpoints
