# backend/internal/gen/api/oas_schemas_gen.go
@@ -311,6 +311,52 @@ func (s *Match) SetStage(val string) {
 	s.Stage = val
 }
 
+// NewOptBool returns new OptBool with value set to v.
+func NewOptBool(v bool) OptBool {
+	return OptBool{
+		Value: v,
+		Set:   true,
+	}
+}
+
+// OptBool is optional bool.
+type OptBool struct {
+	Value bool
+	Set   bool
+}
+
+// IsSet returns true if OptBool was set.
+func (o OptBool) IsSet() bool { return o.Set }
+
+// Reset unsets value.
+func (o *OptBool) Reset() {
+	var v bool
+	o.Value = v
+	o.Set = false
+}
+
+// SetTo sets value to v.
+func (o *OptBool) SetTo(v bool) {
+	o.Set = true
+	o.Value = v
+}
+
+// Get returns value and boolean that denotes whether value was set.
+func (o OptBool) Get() (v bool, ok bool) {
+	if !o.Set {
+		return v, false
+	}
+	return o.Value, true
+}
+
+// Or returns value if set, or given parameter if does not.
+func (o OptBool) Or(d bool) bool {
+	if v, ok := o.Get(); ok {
+		return v
+	}
+	return d
+}
+
 // NewOptRecruitmentInfo returns new OptRecruitmentInfo with value set to v.
 func NewOptRecruitmentInfo(v RecruitmentInfo) OptRecruitmentInfo {
 	return OptRecruitmentInfo{
@@ -503,15 +549,15 @@ func (s *RecruitmentInfo) SetGameMode(val string) {
 
 // Ref: #/components/schemas/Team
 type Team struct {
-	Recruitments []RecruitmentInfo `json:"recruitments"`
+	Recruitment RecruitmentInfo `json:"recruitment"`
 }
 
-// GetRecruitments returns the value of Recruitments.
-func (s *Team) GetRecruitments() []RecruitmentInfo {
-	return s.Recruitments
+// GetRecruitment returns the value of Recruitment.
+func (s *Team) GetRecruitment() RecruitmentInfo {
+	return s.Recruitment
 }
 
-// SetRecruitments sets the value of Recruitments.
-func (s *Team) SetRecruitments(val []RecruitmentInfo) {
-	s.Recruitments = val
+// SetRecruitment sets the value of Recruitment.
+func (s *Team) SetRecruitment(val RecruitmentInfo) {
+	s.Recruitment = val
 }
