# backend/internal/gen/api/oas_validators_gen.go
@@ -183,30 +183,13 @@ func (s *Team) Validate() error {
 
 	var failures []validate.FieldError
 	if err := func() error {
-		if s.Recruitments == nil {
-			return errors.New("nil is invalid value")
-		}
-		var failures []validate.FieldError
-		for i, elem := range s.Recruitments {
-			if err := func() error {
-				if err := elem.Validate(); err != nil {
-					return err
-				}
-				return nil
-			}(); err != nil {
-				failures = append(failures, validate.FieldError{
-					Name:  fmt.Sprintf("[%d]", i),
-					Error: err,
-				})
-			}
-		}
-		if len(failures) > 0 {
-			return &validate.Error{Fields: failures}
+		if err := s.Recruitment.Validate(); err != nil {
+			return err
 		}
 		return nil
 	}(); err != nil {
 		failures = append(failures, validate.FieldError{
-			Name:  "recruitments",
+			Name:  "recruitment",
 			Error: err,
 		})
 	}
